--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "destroy": "cdk destroy"
   },
   "dependencies": {
+    "@aws-cdk/aws-apigatewayv2-alpha": "^2.17.0-alpha.0",
+    "@aws-cdk/aws-apigatewayv2-integrations-alpha": "^2.17.0-alpha.0",
     "aws-cdk-lib": "latest",
     "constructs": "latest"
   },
   "devDependencies": {
+    "@types/node": "^17.0.23",
     "aws-cdk": "latest",
+    "aws-sdk": "^2.1101.0",
     "rimraf": "latest",
     "typescript": "latest"
   }
